# proto-service-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: buf-lint.yml  rust.yml
examples/: Cargo.toml  build.rs
examples/proto/: greeter.proto
examples/src/: lib.rs
examples/tests/: e2e.rs
proto-service/: Cargo.toml
proto-service-build/: Cargo.toml
proto-service-build/src/: client.rs  doc.rs  generator.rs  lib.rs  server_impl.rs  server_trait.rs  test_support.rs  util.rs
proto-service-pipe/: Cargo.toml  build.rs
proto-service-pipe/src/: client.rs  lib.rs  spawner.rs  transport.rs  util.rs
proto-service/src/: call.rs  client.rs  extensions.rs  lib.rs  metadata.rs  request.rs  response.rs  router.rs  service.rs  status.rs
proto-service/src/client/: connection.rs  mod.rs  raw.rs  request.rs  response.rs
proto-service/src/server/: mod.rs  response.rs  router.rs  service.rs
proto/proto_pipe/v1/: packet.proto
