[package]
name = "proto-service-examples"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
proto-service.workspace = true
prost.workspace = true

[dev-dependencies]
proto-service-pipe = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["rt", "macros"] }
futures.workspace = true

[build-dependencies]
proto-service-build.workspace = true
prost-build.workspace = true
