[package]
name = "proto-service-build"
description = "Service code generator for proto-service, pluggable into prost-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prost-build = "0.14"
prettyplease = "0.2"
manyhow = "0.11"
