[package]
name = "proto-service-build"
description = "Service code generator for proto-service, pluggable into prost-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
prost-build.workspace = true
prettyplease.workspace = true
manyhow.workspace = true
